Fixed bug in function victoryAchived() break instruction replaced by continue. Comments on every function added

--- a/style.css
+++ b/style.css
@@ -11,8 +11,9 @@ body {
 canvas {
     /* border: 2px solid #000; */
     border: none;
+    border-radius: 6px;
     background: #ffffff;
-    outline: 2px solid #000000;
+    outline: 4px solid #000000;
     /* outline-offset: 5px; */    
     position: absolute;
     transform: translate(-50%, -50%);
